# newsroom

./: .flake8  .gitignore  LICENSE  noxfile.py  pyproject.toml
medium_map/1/: medium_map.json
newsroom_2020/: __array_schema.tdb
sample_news/: 04_02_2020_14_05_57.json  04_02_2020_14_11_06.json  04_02_2020_14_26_15.json  04_02_2020_15_41_13.json  04_02_2020_16_16_29.json  04_02_2020_16_51_36.json  04_02_2020_17_21_44.json  04_02_2020_17_56_55.json  04_02_2020_18_32_12.json  04_02_2020_19_07_11.json  04_02_2020_19_42_07.json  04_02_2020_20_17_17.json  04_02_2020_20_52_17.json  04_02_2020_21_27_17.json  04_02_2020_22_02_22.json  04_02_2020_22_37_23.json  04_02_2020_23_12_18.json  04_02_2020_23_47_27.json
src/newsroom/: create_array.py  ingest_news.py  medium_map_generator.py  news_file.py  pilot.py  read_array.py  storage.py  wikipedia.py  write_array.py
tests/: test_pilot.py  test_wikipedia.py
