[tool.poetry]
name = "newsroom"
version = "0.1.0"
description = "A breaking news finder"
authors = ["Andreas Ntalakas <antalakas@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/antalakas/newsroom"
repository = "https://github.com/antalakas/newsroom"
keywords = ["newsroom", "breaking", "news"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22.0"
flake8 = "^3.7.9"
tiledb = "^0.5.6"
tiledb-cloud = "^0.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-bandit = "^2.1.2"
flake8-black = "^0.1.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.8.5"

[tool.poetry.scripts]
wikipedia = "newsroom.pilot:main"
ingestion = "newsroom.ingest_news:main"
medium_map = "newsroom.medium_map_generator:main"
create_array = "newsroom.create_array:main"
write_array = "newsroom.write_array:main"
read_array = "newsroom.read_array:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["newsroom"]

[tool.coverage.report]
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
